- we don't set ModulesPath to DRI_GLX_SPECIAL value, so we must read it
  differently so that Xconfig::various::info() is correct (#31326)

Version 0.32 - 26 September 2007, by Pascal "Pixel" Rigaux

- monitor-probe-using-X can now return EDIDs. if Xorg find an EDID (whereas
  monitor-get-edid-using-vbe failed), defaults to "Plug'n Play" monitor (ie
  let Xorg do things automatically) instead of good_default_monitor.
  (requires monitor-edid 1.12)
- fix typo in 0.30: do not use "Automatic" resolution by default in --auto

Version 0.31 - 25 September 2007, by Thierry Vignaud

- updated translation

Version 0.30 - 25 September 2007, by Pascal "Pixel" Rigaux

- add support for "Automatic" resolution (aka "let xorg do everything")
- when user asks for "Plug'n Play", silently default to Xorg auto-detection
  when we fail to auto-detect

Version 0.29 - 21 September 2007, by Olivier "blino" Blin

- unload drivers loaded by monitor-probe-using-X
  (fix fglrx usage when harddrake probes using X and loads radeon driver)

Version 0.28 - 20 September 2007, by Pascal "Pixel" Rigaux

- when using evdev for mice, ensure it doesn't match a keyboard
  (eg: in case of a mouse+keyboard combo) (#32905)
- fix regression in 0.24: remove bogus duplicates in monitors tree (#33778)

Version 0.27 - 19 September 2007, by Pascal "Pixel" Rigaux

- for evdev configured mice, specify bustype
  (useful for "Macintosh mouse button emulation" which has same vendor/product
   as "AT Translated Set 2 keyboard")
  (need drakxtools-backend 10.4.203)

Version 0.26 - 17 September 2007, by Pascal "Pixel" Rigaux

- handle fglrx-hd2000 driver (Anssi)

Version 0.25 - 10 September 2007, by Pascal "Pixel" Rigaux

- in the list of available Xorg drivers, add "Driver" from Cards+
  (will ease the maintainance of the list of drivers in Xconfig/card.pm)
- minimal support for allowing to choose evdev on all mice

Version 0.24 - 7 September 2007, by Pascal "Pixel" Rigaux

- do not configure XFS, it's useless